# EgoVizML

./: .gitignore  FAQ.md  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
analysis/: 00_scratch.ipynb  0_visualize_detections.ipynb  10_binary_detections_active.ipynb  11_computing_auc.ipynb  12_save_preds_and_figure.ipynb  13_FULL_ABLATION_STUDY.ipynb  14_SAVE_MODEL.ipynb  14_ollama_scratch.ipynb  15_LLaVA_EVALUATION.ipynb  1_bag_of_objects.ipynb  2_adl_recognition.ipynb  3_adl_recognition_counts.ipynb  4_effect_of_detections.ipynb  5_hyperparameter_tuning.ipynb  6_effect_of_active_weights.ipynb  6_weights_vs_active.ipynb  7_effect_of_active_objects.ipynb  8_best_active_weight.ipynb  9_weighted_binary_presence.ipynb  A1_01_stats_and_figures.ipynb  adl_recognition_counts.ipynb  effect_of_detections.ipynb  hyperparameter_tuning.ipynb
data/: all_data_processed.pkl  dashboard_video_keys.json  llava_results.pkl  llava_results_34b.pkl  llava_results_7b.pkl  llava_results_7b_new.pkl  patient_adl_breakdown.json
models/: binary_active_logreg.joblib
process_preds/: process_all_preds.py  process_detic.py
scripts/: adl_recognition.ipynb  bag_of_objects.ipynb  combine_detic_preds.py  compute_stats.py  generate_grid.py  generate_grids_dir.py  get_dashboard_metrics.py  home_data_adl_breakdown.py  process_detic_frames.py  run_detic.py  run_shan.py  scratch.ipynb  split_frames_only.py  sum_video_length.py  video_to_subclips_and_frames.py
shan_model/: .gitignore  DOCKER.md  Dockerfile  README.md  run_shan.py
src/: setup.py
test/: test_egoviz.py  (+1 more)
(+14 files in other folders)
