[tool.poetry]
name = "egovizml"
version = "0.1.0"
description = ""
authors = ["Adesh <adeshkadambi@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
moviepy = "^1.0.3"
opencv-python = "^4.8.1.78"
pandas = "^2.1.1"
polars = "^0.19.5"
scikit-learn = "^1.3.1"
egoviz = {path = "src", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
