[tool.poetry]
name = "egovizml"
version = "0.1.0"
description = ""
authors = ["Adesh <adeshkadambi@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
moviepy = "^1.0.3"
opencv-python = "^4.8.1.78"
pandas = "^2.1.1"
polars = "^0.19.5"
scikit-learn = "^1.3.1"
egoviz = {path = "src", develop = true}
streamlit = "^1.27.1"
watchdog = "^3.0.0"
cython = "^3.0.2"
cmake = "^3.27.6"
mss = "^9.0.1"
timm = "^0.9.7"
ftfy = "^6.1.1"
regex = "^2023.8.8"
lvis = "^0.5.3"
nltk = "^3.8.1"
clip = {git = "https://github.com/openai/CLIP.git"}
numpy = "^1.26.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
xgboost = "^2.0.2"
icecream = "^2.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
